# CLI-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  header.h  main.cpp
tools/: binary.cpp  binarytodecimal.cpp  morse.cpp  number.cpp  portscan.cpp  subnet.cpp
